--- a/HOSTING/connstring.html
+++ b/HOSTING/connstring.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Welcome</title>
+        <title>Load Sample Data</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" >
@@ -17,14 +17,26 @@
 
             </div>
             <div id="commentform">
-                <label for="txt_name">Name:</label>
+                <h2>Prerequisites:</h2>
+                <ul>
+                    <li>Deploy an Atlas Cluster</li>
+                    <li>Create a username/password under the "Database Access" tab</li>
+                    <li>Allow access from anywhere by adding 0.0.0.0/0 to the IP Whitelist on the "Network Access" tab (temporarily)</li>
+                    <li>Click "Connect" on your cluster, then "Connect with Compass" </li>
+                    <li>Copy the connection string, paste it below, and change the username/password to the one you created above</li>
+                    <li>Click "Queue Data Load" on this page and wait</li>
+                    <li>Check the "Collections" tab in Atlas to see new data loaded</li>
+                </ul>
+
+                <h2>Data Load Request</h2>
+                <label for="txt_name">Your Name:</label>
                 <input type="text" name="txt_name" id="txt_name" class="form-control" />
 
                 <label for="txt_cs">Connection String:</label>
-                <input type="text" name="txt_cs" id="txt_cs" class="form-control" />
+                <input type="text" name="txt_cs" id="txt_cs" class="form-control" placeholder="mongodb+srv://<username>:<password>@host.mongodb.net/test" />
               
                 <br />
-                <button onclick="insertRecord();return false;" class="btn btn-lg btn-success">Submit</button>
+                <button onclick="insertRecord();return false;" class="btn btn-lg btn-success">Queue Data Load</button>
                 <br /><br />
             </div>
         </div>
@@ -49,8 +61,8 @@
                     obj.bucket = "gskyclassshare";
                     obj.dsURI = "gskyclassshare";
                     obj.db = "class";
-                    obj.col = "import";
-                    obj.fn = "01.json";
+                    obj.col = "bucketing";
+                    obj.fn = "bucketexample.json";
 
                     obj.browser = {};
                     obj.browser.ua = navigator.userAgent || undefined;
